// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser downloadCSV downloads data from a CSV URL 1`] = `
Object {
  "data": Array [
    Array [
      "Section Name",
      "Ageuta-3",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Phrase",
      "1",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Start Time",
      "30'05\\"",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Beat",
      "",
      "",
      "1",
      "",
      "2",
      "",
      "3",
      "",
      "4",
      "",
      "5",
      "",
      "6",
      "",
      "7",
      "",
      "8",
      "",
      "",
    ],
    Array [
      "Syllable Text",
      "",
      "",
      "",
      "",
      "tsu",
      "u",
      "",
      "ri",
      "ki",
      "no",
      "",
      "mi",
      "wo",
      "he",
      "n",
      "ji",
      "(i)",
      "",
      "",
    ],
    Array [
      "Syllable Number",
      "",
      "",
      "",
      "",
      "1",
      "2",
      "",
      "3",
      "4",
      "5",
      "",
      "1",
      "2",
      "3",
      "4",
      "5",
      "",
      "",
      "",
    ],
    Array [
      "Text",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Vocal Range",
      "high",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Percussion",
      "tsuzuke",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Nohkan",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Dance",
      "Feminine style",
      "",
      "",
      "",
      "",
      "",
      "",
      "9. Kneeling, turns to face front. ",
      "",
      "",
      "",
      "",
      "$",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Phrase",
      "2",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Start Time",
      "30'14\\"",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Beat",
      "",
      "",
      "1",
      "",
      "2",
      "",
      "3",
      "",
      "4",
      "",
      "5",
      "",
      "6",
      "",
      "7",
      "",
      "8",
      "",
      "",
    ],
    Array [
      "Syllable Text",
      "",
      "",
      "",
      "",
      "tsu",
      "u",
      "",
      "ri",
      "ki",
      "no",
      "",
      "mi",
      "wo",
      "he",
      "",
      "n",
      "ji",
      "",
      "",
    ],
    Array [
      "Syllable Number",
      "",
      "",
      "",
      "",
      "1",
      "2",
      "",
      "3",
      "4",
      "5",
      "",
      "1",
      "2",
      "3",
      "",
      "4",
      "5",
      "",
      "",
    ],
    Array [
      "Text",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Vocal Range",
      "high",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Percussion",
      "tsuzuke",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Nohkan",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "Dance",
      "",
      "",
      "",
      "",
      "",
      "",
      "9. Turns to face the waki.",
      "",
      "",
      "",
      "$",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    Array [
      "  ",
    ],
  ],
  "errors": Array [],
  "meta": Object {
    "aborted": false,
    "cursor": 908,
    "delimiter": ",",
    "linebreak": "
",
    "truncated": false,
  },
}
`;

exports[`parser extractRows extracts and formats content for a series of rows 1`] = `
Object {
  "beat": Object {
    "grid": Array [
      Object {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "1",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "2",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 5,
        "style": "normal",
        "text": "3",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "4",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 9,
        "style": "normal",
        "text": "5",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "6",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "7",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "8",
        "voices": Array [],
      },
    ],
    "value": "",
  },
  "dance": Object {
    "grid": Array [
      Object {
        "length": 4,
        "start": 2,
        "style": "normal",
        "text": "2. Open-retreat.",
        "voices": Array [],
      },
      Object {
        "length": 6,
        "start": 8,
        "style": "normal",
        "text": "1. R. Step pivot facing bridge.",
        "voices": Array [],
      },
    ],
    "value": "",
  },
  "nohkan": Object {
    "grid": Array [
      Object {
        "length": 3,
        "start": 15,
        "style": "normal",
        "text": "Hishigi",
        "voices": Array [],
      },
    ],
    "value": "",
  },
  "percussion": Object {
    "grid": Array [],
    "value": "tome",
  },
  "startTime": Object {
    "grid": Array [],
    "value": "31'00\\"",
  },
  "syllableNumber": Object {
    "grid": Array [
      Object {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "1",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "2",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "3",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "4",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "5",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "6",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "7",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "1",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "2",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "3",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "4",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "5",
        "voices": Array [],
      },
    ],
    "value": "",
  },
  "syllableText": Object {
    "grid": Array [
      Object {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "yu",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "ku",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "he",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "mo",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 4,
        "style": "normal",
        "text": "(o)",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "shi",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "ra",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "zu",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "u",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "se",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "ni",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "ke",
        "voices": Array [],
      },
      Object {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "ri",
        "voices": Array [],
      },
    ],
    "value": "",
  },
  "text": Object {
    "grid": Array [],
    "value": "",
  },
  "vocalRange": Object {
    "grid": Array [],
    "value": "high",
  },
}
`;

exports[`parser main downloads and parses phrases and metadata 1`] = `
"{
  \\"sectionName\\": {},
  \\"startTime\\": {},
  \\"endTime\\": {},
  \\"intensity\\": {},
  \\"numberVoices\\": {},
  \\"voice\\": {},
  \\"text\\": {},
  \\"numberOfPercussion\\": {},
  \\"percussion\\": {},
  \\"nokhanPresent\\": {
    \\"play\\": \\"No\\"
  },
  \\"dancePresent\\": {
    \\"play\\": \\"Yes\\"
  },
  \\"\\": {},
  \\"phrases\\": [
    {
      \\"startTime\\": {
        \\"value\\": \\"30'05\\\\\\"\\",
        \\"grid\\": []
      },
      \\"beat\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 1,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 9,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"6\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"7\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"8\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableText\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"tsu\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"u\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ri\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ki\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"no\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"mi\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"wo\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"he\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"n\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ji\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"(i)\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableNumber\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"text\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"vocalRange\\": {
        \\"value\\": \\"high\\",
        \\"grid\\": []
      },
      \\"percussion\\": {
        \\"value\\": \\"tsuzuke\\",
        \\"grid\\": []
      },
      \\"nohkan\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"dance\\": {
        \\"value\\": \\"feminine-style\\",
        \\"grid\\": [
          {
            \\"text\\": \\"9. Kneeling, turns to face front.\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 6
          }
        ]
      },
      \\"phrase\\": \\"1\\"
    },
    {
      \\"startTime\\": {
        \\"value\\": \\"30'14\\\\\\"\\",
        \\"grid\\": []
      },
      \\"beat\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 1,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 9,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"6\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"7\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"8\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableText\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"tsu\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"u\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ri\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ki\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"no\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"mi\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"wo\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"he\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"n\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ji\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableNumber\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"text\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"vocalRange\\": {
        \\"value\\": \\"high\\",
        \\"grid\\": []
      },
      \\"percussion\\": {
        \\"value\\": \\"tsuzuke\\",
        \\"grid\\": []
      },
      \\"nohkan\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"dance\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"9. Turns to face the waki.\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 5
          }
        ]
      },
      \\"phrase\\": \\"2\\"
    }
  ],
  \\"narrative\\": {
    \\"value\\": \\"/kokaji/narratives/ageuta-1.html\\"
  }
}"
`;

exports[`parser main downloads and parses phrases and metadata 2`] = `
"{
  \\"sectionName\\": {},
  \\"startTime\\": {},
  \\"endTime\\": {},
  \\"intensity\\": {},
  \\"numberVoices\\": {},
  \\"voice\\": {},
  \\"text\\": {},
  \\"numberOfPercussion\\": {},
  \\"percussion\\": {},
  \\"nokhanPresent\\": {
    \\"play\\": \\"No\\"
  },
  \\"dancePresent\\": {
    \\"play\\": \\"Yes\\"
  },
  \\"\\": {},
  \\"phrases\\": [
    {
      \\"startTime\\": {
        \\"value\\": \\"30'05\\\\\\"\\",
        \\"grid\\": []
      },
      \\"beat\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 1,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 9,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"6\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"7\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"8\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableText\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"tsu\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"u\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ri\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ki\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"no\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"mi\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"wo\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"he\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"n\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ji\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"(i)\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableNumber\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"text\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"vocalRange\\": {
        \\"value\\": \\"high\\",
        \\"grid\\": []
      },
      \\"percussion\\": {
        \\"value\\": \\"tsuzuke\\",
        \\"grid\\": []
      },
      \\"nohkan\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"dance\\": {
        \\"value\\": \\"feminine-style\\",
        \\"grid\\": [
          {
            \\"text\\": \\"9. Kneeling, turns to face front.\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 6
          }
        ]
      },
      \\"phrase\\": \\"1\\"
    },
    {
      \\"startTime\\": {
        \\"value\\": \\"30'14\\\\\\"\\",
        \\"grid\\": []
      },
      \\"beat\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 1,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 9,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"6\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"7\\",
            \\"voices\\": [],
            \\"start\\": 13,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"8\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableText\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"tsu\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"u\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ri\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ki\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"no\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"mi\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"wo\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"he\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"n\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"ji\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"syllableNumber\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 3,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 4,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 6,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 7,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 8,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"1\\",
            \\"voices\\": [],
            \\"start\\": 10,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"2\\",
            \\"voices\\": [],
            \\"start\\": 11,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"3\\",
            \\"voices\\": [],
            \\"start\\": 12,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"4\\",
            \\"voices\\": [],
            \\"start\\": 14,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          },
          {
            \\"text\\": \\"5\\",
            \\"voices\\": [],
            \\"start\\": 15,
            \\"style\\": \\"normal\\",
            \\"length\\": 1
          }
        ]
      },
      \\"text\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"vocalRange\\": {
        \\"value\\": \\"high\\",
        \\"grid\\": []
      },
      \\"percussion\\": {
        \\"value\\": \\"tsuzuke\\",
        \\"grid\\": []
      },
      \\"nohkan\\": {
        \\"value\\": \\"\\",
        \\"grid\\": []
      },
      \\"dance\\": {
        \\"value\\": \\"\\",
        \\"grid\\": [
          {
            \\"text\\": \\"9. Turns to face the waki.\\",
            \\"voices\\": [],
            \\"start\\": 5,
            \\"style\\": \\"normal\\",
            \\"length\\": 5
          }
        ]
      },
      \\"phrase\\": \\"2\\"
    }
  ],
  \\"narrative\\": {
    \\"value\\": \\"/kokaji/narratives/ageuta-2.html\\"
  }
}"
`;

exports[`parser main downloads and parses phrases and metadata 3`] = `
"{
  \\"playName\\": \\"kokaji\\",
  \\"sections\\": [
    {
      \\"sectionName\\": {},
      \\"startTime\\": {},
      \\"endTime\\": {},
      \\"intensity\\": {},
      \\"numberVoices\\": {},
      \\"voice\\": {},
      \\"text\\": {},
      \\"numberOfPercussion\\": {},
      \\"percussion\\": {},
      \\"nokhanPresent\\": {
        \\"play\\": \\"No\\"
      },
      \\"dancePresent\\": {
        \\"play\\": \\"Yes\\"
      },
      \\"\\": {},
      \\"narrative\\": {
        \\"value\\": \\"/kokaji/narratives/ageuta-2.html\\"
      }
    }
  ],
  \\"narrative\\": \\"/kokaji.html\\"
}"
`;

exports[`parser processMetadata turns metadata into a hash map 1`] = `
Object {
  "dancePresent": Object {
    "present": "Yes",
    "value": "Feminine to Martial style",
  },
  "endTime": Object {
    "value": "31'19\\"",
  },
  "intensity": Object {
    "number": "13",
  },
  "nokhanPresent": Object {
    "present": "No",
  },
  "numberOfPercussion": Object {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi",
  },
  "numberVoices": Object {
    "number": "2",
    "value": "Jiutai",
  },
  "percussion": Object {
    "value": "Congruent",
  },
  "play": Object {
    "value": "kokaji",
  },
  "sectionName": Object {
    "value": "Ageuta-3",
  },
  "startTime": Object {
    "value": "30'05\\"",
  },
  "text": Object {
    "value": "Congruent - Hiranori",
  },
  "voice": Object {
    "value": "Sung - Tsuyogin",
  },
}
`;

exports[`parser processPhrases parse rows of raw data into structured phrases 1`] = `
Object {
  "phrases": Array [
    Object {
      "beat": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 1,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 5,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 9,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "6",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 13,
            "style": "normal",
            "text": "7",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 15,
            "style": "normal",
            "text": "8",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "dance": Object {
        "grid": Array [
          Object {
            "length": 6,
            "start": 6,
            "style": "normal",
            "text": "9. Kneeling, turns to face front.",
            "voices": Array [],
          },
        ],
        "value": "feminine-style",
      },
      "nohkan": Object {
        "grid": Array [],
        "value": "",
      },
      "percussion": Object {
        "grid": Array [],
        "value": "tsuzuke",
      },
      "phrase": "1",
      "startTime": Object {
        "grid": Array [],
        "value": "30'05\\"",
      },
      "syllableNumber": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 4,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 6,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 8,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 10,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 12,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 13,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 14,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "syllableText": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "tsu",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 4,
            "style": "normal",
            "text": "u",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 6,
            "style": "normal",
            "text": "ri",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "ki",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 8,
            "style": "normal",
            "text": "no",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 10,
            "style": "normal",
            "text": "mi",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "wo",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 12,
            "style": "normal",
            "text": "he",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 13,
            "style": "normal",
            "text": "n",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 14,
            "style": "normal",
            "text": "ji",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 15,
            "style": "normal",
            "text": "(i)",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "text": Object {
        "grid": Array [],
        "value": "",
      },
      "vocalRange": Object {
        "grid": Array [
          Object {
            "length": 2,
            "start": 3,
            "style": "normal",
            "text": "high",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 6,
            "style": "normal",
            "text": "medium",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "low",
            "voices": Array [],
          },
          Object {
            "length": 3,
            "start": 9,
            "style": "normal",
            "text": "low",
            "voices": Array [],
          },
        ],
        "value": "",
      },
    },
    Object {
      "beat": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 1,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 5,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 9,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "6",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 13,
            "style": "normal",
            "text": "7",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 15,
            "style": "normal",
            "text": "8",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "dance": Object {
        "grid": Array [
          Object {
            "length": 5,
            "start": 5,
            "style": "normal",
            "text": "9. Turns to face the waki.",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "nohkan": Object {
        "grid": Array [],
        "value": "",
      },
      "percussion": Object {
        "grid": Array [],
        "value": "tsuzuke",
      },
      "phrase": "2",
      "startTime": Object {
        "grid": Array [],
        "value": "30'14\\"",
      },
      "syllableNumber": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 4,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 6,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 8,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 10,
            "style": "normal",
            "text": "1",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "2",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 12,
            "style": "normal",
            "text": "3",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 14,
            "style": "normal",
            "text": "4",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 15,
            "style": "normal",
            "text": "5",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "syllableText": Object {
        "grid": Array [
          Object {
            "length": 1,
            "start": 3,
            "style": "normal",
            "text": "tsu",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 4,
            "style": "normal",
            "text": "u",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 6,
            "style": "normal",
            "text": "ri",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 7,
            "style": "normal",
            "text": "ki",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 8,
            "style": "normal",
            "text": "no",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 10,
            "style": "normal",
            "text": "mi",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 11,
            "style": "normal",
            "text": "wo",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 12,
            "style": "normal",
            "text": "he",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 14,
            "style": "normal",
            "text": "n",
            "voices": Array [],
          },
          Object {
            "length": 1,
            "start": 15,
            "style": "normal",
            "text": "ji",
            "voices": Array [],
          },
        ],
        "value": "",
      },
      "text": Object {
        "grid": Array [],
        "value": "",
      },
      "vocalRange": Object {
        "grid": Array [],
        "value": "high",
      },
    },
  ],
  "sectionName": "ageuta-3",
}
`;
